@@ -2,10 +2,14 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Fix: The *pel-rst-open-target* function, used by *pel-open-at-point* in
+  reStructuredText buffers, now properly handle target links that include
+  characters that must be escaped.  It now also works when the directory of
+  the reStructuredText file is not the current working directory.
 - Fix: warning generated by pel-add-hook-for was invalidly referring to lispy.
 - Fix: The PEL key bindings for iedit-mode described in PEL documentation were not
   activated (such as ~M-C~ for upper-casing all instances).  This is now fixed.
-- Fix: **pel-replace-regexp** and **pel-query-replace-regexp** commands:
+- Fix: *pel-replace-regexp* and *pel-query-replace-regexp* commands:
   they now call the proper regexp replacement function when using the Emacs
   default regular expression syntax instead of the non-regexp string replacement
   function.  Also clarified the PDF documentation for these commands.
